Fix the spacing between the event organizer names

--- a/src/styles/OrganizerCell.less
+++ b/src/styles/OrganizerCell.less
@@ -31,8 +31,8 @@
         position: relative;
         .common-font();
         margin-top: 10px;
+        margin-bottom: 10px;
         height: fit-content;
         font-weight: bolder;
-        margin-bottom: 25px;
     }
 }
